WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57109
REGRESSION(
r79227
): CFURLCache not initialized correctly in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=57109
Summary
REGRESSION(r79227): CFURLCache not initialized correctly in WebKit2
Brian Weinstein
Reported
2011-03-25 11:41:18 PDT
The CFURLCache isn't being correctly initialized in WebKit2 on Windows. if (parameters.cfURLCachePath[parameters.cfURLCachePath.length() - 1] == '/') checks for a trailing slash, but the Windows path separator is '\', not '/'. <
rdar://problem/9184590
>
Attachments
[PATCH] Fix
(1.65 KB, patch)
2011-03-25 11:44 PDT
,
Brian Weinstein
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-03-25 11:44:15 PDT
Created
attachment 86966
[details]
[PATCH] Fix
Brian Weinstein
Comment 2
2011-03-25 11:48:09 PDT
Landed in
r81975
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug