REGRESSION(r79227): CFURLCache not initialized correctly in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=57109 <rdar://problem/9184590>

Reviewed by Alexey Proskuryakov.

Check for a trailing Windows path separator, not a Unix path separator.

* UIProcess/win/WebContextWin.cpp:
(WebKit::WebContext::platformInitializeWebProcess):



Canonical link: https://commits.webkit.org/71782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81975 268f45cc-cd09-0410-ab3c-d52691b4dbfc