Source/WebKit2/UIProcess/win/WebContextWin.cpp
@@ -64,9 +64,9 @@ void WebContext::platformInitializeWebProcess(WebProcessCreationParameters& para
 
     RetainPtr<CFStringRef> cfURLCachePath(AdoptCF, wkCopyFoundationCacheDirectory());
     parameters.cfURLCachePath = String(cfURLCachePath.get());
-    // Remove the ending '/' (necessary to have CFNetwork find the Cache file).
+    // Remove the ending '\' (necessary to have CFNetwork find the Cache file).
     ASSERT(parameters.cfURLCachePath.length());
-    if (parameters.cfURLCachePath[parameters.cfURLCachePath.length() - 1] == '/')
+    if (parameters.cfURLCachePath[parameters.cfURLCachePath.length() - 1] == '\\')
         parameters.cfURLCachePath.remove(parameters.cfURLCachePath.length() - 1);
 
 #if USE(CFURLSTORAGESESSIONS)
